<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/speechMenuRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_weight="0"
            android:background="#757575"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnDownloadAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_download" />

            <TextView
                android:id="@+id/downloadAllTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDownloadAll"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <ImageButton
                android:id="@+id/btnMaintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_maintain" />

            <TextView
                android:id="@+id/setRightBound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlgTitleMaintaining"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <ImageButton
                android:id="@+id/btnManageStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_options" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_storage_manage"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF0000"
        android:text="No data" />

</LinearLayout>