<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <View
        android:id="@+id/View02"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#B3B3F9" />

    <LinearLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/setLeftBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_press"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/left_bound_icon"
                android:text="@string/digOptSetRegionStart"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/leftBoundDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="#B3B3F9" />

        <LinearLayout
            android:id="@+id/setRightBound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right_bound_icon"
                android:text="@string/dlgOptSetRegionEnd"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rightBoundDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#B3B3F9" />

    <LinearLayout
        android:id="@+id/saveOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/save_icon" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/menuStrSavePlayRegion"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</LinearLayout>
